--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: my-secret
   annotations:
-    token: "secret"
+    token: "new-secret"
     app: test
 type: Opaque
 data:
