--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: my-secret
   annotations:
-    token: secret
-    app: true
+    token: 0
+    app: test
 type: Opaque
 
