--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-secret
   annotations:
     openshift.io/token-secret.value: token
-    api-key: secret
+    api-key: new-secret
     app: test
 type: Opaque
 
