--- a/manifest.yaml
+++ b/manifest.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     openshift.io/token-secret.value: token
     api-key: secret
-    app: test
+    app: true
 type: Opaque
 
