--- a/manifest.yaml
+++ b/manifest.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     openshift.io/token-secret.value: secret
     api-key: "null"
-    app: null
+    app: test
 type: Opaque
 
