--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,16 +1,19 @@
 apiVersion: v1
-kind: Secret
+kind: Pod
 metadata:
-  name: my-secret
-type: Opaque
-data:
-  username: dXNlcm5hbWU=
-  password: cGFzc3dvcmQ=
+  name: pod1
+spec:
+  containers:
+  - name: my-container
+    image: public.ecr.aws/docker/library/alpine
+    command: ["sleep"]
+    args:
+    - 10h
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: my-pod
+  name: pod2
 spec:
   containers:
   - name: my-container
