--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,19 +4,7 @@ metadata:
   name: pod1
 spec:
   containers:
-  - name: my-container
-    image: public.ecr.aws/docker/library/alpine
-    command: ["sleep"]
-    args:
-    - 10h
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: pod2
-spec:
-  containers:
-  - name: my-container
+  - name: container1
     image: public.ecr.aws/docker/library/alpine
     command: ["sleep"]
     args:
