--- a/manifests.yaml
+++ b/manifests.yaml
@@ -3,8 +3,5 @@ kind: Secret
 metadata:
   name: my-secret
 type: Opaque
-data:
-  username: dXNlcm5hbWU=
-  password: 1
-stringData:
-  bu: bu
+data: {}
+stringData: {}
