--- a/manifest.yaml
+++ b/manifest.yaml
@@ -6,7 +6,7 @@ metadata:
     openshift.io/token-secret.value: secret
     api: key
     app: "null"
-    timestamp: null
+    #timestamp: null
 type: Opaque
 stringData:
   username: username
