--- a/manifest.yaml
+++ b/manifest.yaml
@@ -6,6 +6,7 @@ metadata:
     openshift.io/token-secret.value: secret
     api: key
     app: "null"
+    new: "true"
     #timestamp: null
 type: Opaque
 stringData:
