--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,3 +1,17 @@
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: example
+spec:
+  capacity:
+    storage: 5Ti
+  accessModes:
+    - ReadOnlyMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: SOME_NFS_SERVER
+    path: /example
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
