--- a/user.yaml
+++ b/user.yaml
@@ -2,5 +2,7 @@ apiVersion: user.openshift.io/v1
 kind: User
 metadata:
   name: dxiadmin
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 identities:
 - allow_all:dxiadmin
