--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,14 +2,32 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod1
+  labels:
+    app: pod1
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   initContainers:
   - name: delay-startup
     image: public.ecr.aws/docker/library/alpine
-    command: ['sleep', '30']
+    command: ['sleep', '10']
   containers:
   - name: container1
     image: public.ecr.aws/docker/library/alpine
     command: ["sleep"]
     args:
     - 10h
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: service1
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
+spec:
+  selector:
+    app: pod1
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
