--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod1
-  labels:
-    app: pod1
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   initContainers:
-  - name: delay-startup
+  - name: delay-startup1
     image: public.ecr.aws/docker/library/alpine
     command: ['sleep', '10']
   containers:
@@ -19,15 +17,19 @@ spec:
     - 10h
 ---
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
-  name: service1
+  name: pod2
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "2"
 spec:
-  selector:
-    app: pod1
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+  initContainers:
+  - name: delay-startup2
+    image: public.ecr.aws/docker/library/alpine
+    command: ['sleep', '10']
+  containers:
+  - name: container2
+    image: public.ecr.aws/docker/library/alpine
+    command: ["sleep"]
+    args:
+    - 10h
