--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,43 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-secret
-  annotations:
-    openshift.io/token-secret.value: secret
-    api: key
-    app: "null"
-    new: "true"
-    #timestamp: null
-type: Opaque
-stringData:
-  username: username-new
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: pod1
-  annotations:
-    openshift.io/token-secret.value: secret
-    api: key
-    app: "null"
-    #timestamp: null
-spec:
-  containers:
-  - name: container1
-    image: public.ecr.aws/docker/library/alpine
-    command: ["sleep"]
-    args:
-    - 10h
----
-apiVersion: v1
-kind: Secret
-metadata:
   name: secret
   annotations:
-    token: TOPSECRET
+    api: key
     app: test
+type: Opaque
 stringData:
-  username: TOPSECRET
-data:
-  password: VE9QU0VDUkVU
+  username: username
 
