--- a/manifests.yaml
+++ b/manifests.yaml
@@ -1,3 +1,8 @@
+apiVersion: operators.coreos.com/v1
+kind: OperatorGroup
+metadata:
+  name: servicemeshoperator
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
