--- a/manifests.yaml
+++ b/manifests.yaml
@@ -1,7 +1,7 @@
-apiVersion: operators.coreos.com/v1
-kind: OperatorGroup
-metadata:
-  name: servicemeshoperator
+#apiVersion: operators.coreos.com/v1
+#kind: OperatorGroup
+#metadata:
+#  name: servicemeshoperator
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
