--- a/manifests.yaml
+++ b/manifests.yaml
@@ -28,6 +28,7 @@ apiVersion: maistra.io/v2
 kind: ServiceMeshControlPlane
 metadata:
   name: istio-system
+  namespace: openshift-gitops
 spec:
   tracing:
     sampling: 10000
